# gSOMOs

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  DOCUMENTATION_setup.md  DOCUMENTATION_setup_v2.md  DOCUMENTATION_setup_v3.md  MANIFEST.in  PUBLISHING.md  PUBLISHING_v2.md  README.md  SOMOs-examples.ipynb  SOMOs_imports_summary.md  pyproject.toml
doc-latex/: FeComplex.xyz  gSOMOS-v2.lyx  gSOMOS-v3.lyx  gSOMOS-v3.tex  new.lyx  new.tex  projection-v2.lyx  projection-v2.tex
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/source/: SOMOs_SciDoc.md  SOMOs_dependencies.md  SOMOs_examples.md  SOMOs_imports_summary.md  SciDoc.md  conf.py  index.rst
somos/: __init__.py  cosim.py  io.py  proj.py
somos/config/: tools4AS.py  tools4pyPC.py  visualID_Eng-v0.py  visualID_Eng.py
