[project]
name = "gSOMOs"
version = "0.2.1"
description = "A Python package to analyze magnetic molecular orbitals (SOMOs) from Gaussian outputs"
authors = [{name = "Romuald POTEAU, LPCNO", email = "romuald.poteau@univ-tlse3.fr"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
    "cclib",
    "ipywidgets",
    "openpyxl",
    "plotly"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["somos"]
