[project]
name = "gSOMOs"
version = "0.2.3"
description = "A Python package to analyze magnetic molecular orbitals (SOMOs) from Gaussian outputs"
authors = [{name = "Romuald POTEAU, LPCNO", email = "romuald.poteau@univ-tlse3.fr"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
    "cclib",
    "ipywidgets",
    "openpyxl",
    "plotly"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["somos"]

[project.urls]
Homepage = "https://github.com/rpoteau/gSOMOs"
Documentation = "https://rpoteau.github.io/gSOMOs/"

Repository = "https://github.com/rpoteau/gSOMOs"
Changelog = "https://github.com/rpoteau/gSOMOs/blob/main/CHANGELOG.md"

