[project]
name = "gSOMOs"
version = "0.9.6"
description = "A Python package to analyze magnetic molecular orbitals (SOMOs) from Gaussian outputs"
authors = [{name = "Romuald POTEAU, LPCNO", email = "romuald.poteau@univ-tlse3.fr"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "cclib",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
    "ipywidgets",
    "openpyxl",
    "plotly",
    "tqdm" ,
    "jupyter"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["somos"]

[project.urls]
Documentation = "https://gsomos.readthedocs.io/"

Repository = "https://github.com/rpoteau/gSOMOs"
Changelog = "https://github.com/rpoteau/gSOMOs/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "myst-parser",
  "numpydoc"
]


